# superconducting-circuits-research-workbench

./: .env.example  .gitignore  Manifest.toml  Project.toml  README.md  juliapkg.json  openapi.json  package.json  pyproject.toml  zensical.toml
app/backend/: pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 20260321_0005_task_runtime_probe_cleanup.py  20260325_0008_session_appstate_durable_baseline.py  20260327_0009_trace_capability_marking.py  20260430_0010_design_scope_lifecycle.py
app/backend/app_backend/: main.py  settings.py
app/backend/app_backend/api/: errors.py  router.py
app/backend/app_backend/domain/: admittance_result_contract.py  authorization.py  characterization_analysis.py  circuit_definition_inspection.py  datasets.py  result_traces.py  session.py  storage.py  tasks.py  trace_ingestion.py  trace_structures.py  workspace_collaboration.py
app/backend/app_backend/infrastructure/: app_state_repository.py  audit_records.py  audit_store.py  casbin_authorization.py  catalog_seed_data.py  durable_catalog_repository.py  durable_runtime_seed.py  invitation_delivery.py  persisted_characterization_runtime.py  persisted_runtime.py  request_debug_middleware.py  request_session_middleware.py  rewrite_app_state_repository.py  rewrite_catalog_repository.py  rewrite_execution_runtime.py  rewrite_task_audit_repository.py  rewrite_task_repository.py  runtime.py  session_jwt_transport.py  simulation_result_publication_materializer.py  storage_reference_factory.py  task_execution_runtime.py  task_result_reference_factory.py  task_seed_data.py  trace_store_axis_value_loader.py
app/backend/app_backend/services/: audit_log_service.py  authorization_service.py  circuit_definition_service.py  dataset_catalog_service.py  dataset_characterization_service.py  dataset_service.py  dataset_trace_service.py  health_service.py  result_trace_publication_service.py  runner_result_publisher.py  schemdraw_render_service.py  session_mutation_service.py  session_projection_service.py  session_service.py  session_service_contracts.py  simulation_result_explorer_models.py  simulation_result_explorer_query_service.py  simulation_result_explorer_selection.py  simulation_result_explorer_service.py  simulation_result_explorer_view_service.py  simulation_result_publication_service.py  task_control_service.py  task_mutation_service.py  task_publication_service.py  task_service.py  task_submission_service.py  trace_collection_service.py  workspace_collaboration_contracts.py  workspace_collaboration_service.py  workspace_invitation_service.py  workspace_membership_service.py
app/backend/app_backend/tooling/: openapi_snapshot.py
app/backend/src/app/: settings.py
app/backend/tests/: conftest.py  test_admittance_result_contract.py  test_audit_logs.py  test_auth_authorization_collaboration.py  test_characterization_registry_history_integration.py  test_characterization_results_integration.py  test_characterization_tagging_integration.py  test_circuit_definition_inspection.py  test_definition_authoring_integration.py  test_health.py  test_hfss_ingestion_integrated.py  test_hfss_pf6fq_real_data_e2e.py  test_openapi_snapshot_tooling.py  test_persistence_baseline.py  test_request_debug_logging.py  test_rewrite_catalog.py  test_runner_api.py  test_sc_core_storage.py  test_secret_management.py  test_service_error_boundaries.py  test_storage_repository_baseline.py  test_storage_runtime_adoption.py  test_task_snapshot_repository_baseline.py  test_trace_collection_service.py
app/backend/tests/runtime_contracts/: test_task_runtime_contracts.py
backend/: pyproject.toml  sitecustomize.py
backend/alembic/versions/: 20260324_0006_definition_identity_uuid_cutover.py  20260325_0007_durable_catalog_runtime_baseline.py  20260325_0008_session_appstate_durable_baseline.py
backend/src/app/: main.py  settings.py
backend/src/app/domain/: admittance_result_contract.py  authorization.py  characterization_analysis.py  circuit_definitions.py  datasets.py  result_traces.py  schemdraw_render.py  session.py  tasks.py  trace_structures.py  workspace_collaboration.py
backend/src/app/infrastructure/: app_state_repository.py  audit_records.py  audit_store.py  casbin_authorization.py  durable_catalog_repository.py  durable_runtime_seed.py  (+19 more)
backend/tests/: conftest.py  test_admittance_result_contract.py  test_audit_logs.py  test_auth_authorization_collaboration.py  test_characterization_registry_history_integration.py  test_characterization_results_integration.py  test_characterization_tagging_integration.py  test_definition_authoring_integration.py  test_hfss_ingestion_integrated.py  test_hfss_pf6fq_real_data_e2e.py  test_local_characterization_integration.py  test_persistence_baseline.py  test_processor_runtime_repository.py  test_rewrite_catalog.py  test_sc_core_adoption.py  test_sc_core_tasking.py  test_service_error_boundaries.py  test_session_and_tasks.py  test_simulation_result_explorer.py  test_simulation_result_publication.py  test_simulation_workflow_integration.py  test_storage_runtime_adoption.py  test_task_snapshot_repository_baseline.py  test_worker_runtime_diagnostics.py  test_worker_runtime_entrypoints.py  worker_runtime_harness.py
core/: pyproject.toml
core/analysis/: pyproject.toml
core/analysis/infrastructure/: paths.py
core/julia/SuperconductingCircuitsAnalysisBridge/: Manifest.toml  Project.toml
core/julia/SuperconductingCircuitsCore/: Manifest.toml  Project.toml
core/julia/SuperconductingCircuitsRunner/: Manifest.toml  Project.toml
core/julia/SuperconductingCircuitsVisualizer/: Manifest.toml  Project.toml
core/python/sc_data_contracts/: pyproject.toml
core/sc_core/: __init__.py  pyproject.toml
core/sc_core/circuit_definitions/: __init__.py  inspection.py
core/sc_core/execution/: __init__.py  contracts.py
core/sc_core/storage/: contracts.py
core/sc_core/tasking/: __init__.py  runtime.py
core/shared/persistence/: database.py  models.py  startup_reconcile.py
core/simulation/infrastructure/: julia_adapter.py
notebooks/python/: pyproject.toml
(+1404 files in other folders)
