[project]
name = "superconducting-circuits-research-workbench"
version = "0.1.0"
description = "Superconducting Circuit Simulation and Analysis Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "core/sc_core",
    "core/python/sc_data_contracts",
    "core/analysis",
    "app/backend",
    "notebooks/python",
]

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
include = [
    "app/backend/app_backend",
    "core/analysis",
    "core/python",
    "core/sc_core",
    "core/shared",
    "core/simulation",
    "scripts",
]
exclude = ["**/__pycache__", ".venv", "data"]
extraPaths = [
    "app/backend",
    "core/analysis",
    "core",
    "core/python",
]
# Basic presence checks only, as requested
reportMissingParameterType = "warning"
reportUnknownParameterType = "none" # Allow unknown types from 3rd party libs

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
    "app/backend/app_backend",
    "core/analysis",
    "core/python",
    "core/sc_core",
    "core/shared",
    "core/simulation",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "N802", # Function name should be lowercase (Physics: T_c, I_c)
    "N803", # Argument name should be lowercase (Physics: L_jun, C_pF)
    "N806", # Variable in function should be lowercase (Physics: L_tot)
    "N813", # Camelcase imported as lowercase in scientific adapters
    "N816", # Variable in global scope mixedCase (Physics units: nH, pF)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "playwright>=1.58.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "zensical>=0.0.21",
]
