[project]
name = "superconducting-circuits-backend"
version = "0.1.0"
description = "FastAPI backend for superconducting circuits services."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "casbin>=1.43.0",
    "fastapi>=0.133.0",
    "numpy>=2.4.3",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "rq>=2.6.0",
    "sc-core",
    "schemdraw>=0.22",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "fakeredis>=2.32.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
include = ["src", "tests"]
reportMissingTypeStubs = "none"

[tool.uv.sources]
sc-core = { path = "../core", editable = true }

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
