[project]
name = "sc-core"
version = "0.1.0"
description = "Shared framework-agnostic core utilities for superconducting circuits workflows."
requires-python = ">=3.12"
dependencies = [
    "juliacall>=0.9.31",
    "lmfit>=1.3.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=5.22.0",
    "pydantic>=2.12.5",
    "rich>=14.3.1",
    "schemdraw>=0.22",
    "scikit-rf>=1.10.0",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.31",
    "zarr>=3.1.3",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sc_core*"]
