[project]
name = "superconducting-circuits-backend"
version = "0.1.0"
description = "FastAPI backend for superconducting circuits services."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "casbin>=1.43.0",
    "fastapi>=0.133.0",
    "fsspec>=2026.1.0",
    "numpy>=2.4.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.41.0",
    "zarr>=3.1.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app_backend", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
include = ["app_backend", "tests"]
reportMissingTypeStubs = "none"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app_backend*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
