[project]
name = "sc-data-contracts"
version = "0.1.0"
description = "Shared task, manifest, and trace contract schemas for superconducting circuits."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sc_data_contracts*"]
