[project]
name = "superconducting-circuits-analysis"
version = "0.1.0"
description = "Python analysis package for superconducting circuit S/Y/Z analysis, fitting, and mode extraction."
requires-python = ">=3.12"
dependencies = [
    "lmfit>=1.3.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=5.22.0",
    "pydantic>=2.12.5",
    "rich>=14.3.1",
    "scikit-rf>=1.10.0",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[project.scripts]
sc-analysis = "superconducting_circuits_analysis.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["superconducting_circuits_analysis*"]
